--- a/my-app/src/components/Header.css
+++ b/my-app/src/components/Header.css
@@ -1,5 +1,9 @@
 /* src/components/Header.css */
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .header {
   background-color: #3f87f5; /* Blue gradient or color */
   display: flex;
